# CubeTest

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: default.fs  default.vs
app/src/main/cpp/: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeArray.cpp  CubeArray.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  InputHandler.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  common.h  main.cpp
app/src/main/java/com/example/cubetest/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
